--- a/club.css
+++ b/club.css
@@ -85,3 +85,19 @@ div.polaroid img{
   width: 100%;
   height: auto;
 }
+/*SCROLL ANIMATION*/
+@keyframes appear{
+  from{
+    opacity: 0;
+clip-path: inset (100% 100% 00);
+  }
+  to{
+ opacity: 1;
+clip-path: inset(0000);
+  }
+}
+.polaroid {
+animation: appear linear;
+animation-timeline: view(); 
+animation-range: entry 0% cover 40%;
+}
