--- a/contact.css
+++ b/contact.css
@@ -126,6 +126,7 @@ background-attachment: fixed;
   margin-left: 50;
    text-align: left;
 }
+/*LOCATION*/
 iframe{
   border-radius: 2em;
   border: none;
