--- a/strand.css
+++ b/strand.css
@@ -67,7 +67,7 @@ background-attachment: fixed;
   line-height: 25px;
 }
 .acadtr h2{
-  color: white;
+  color: blue;
   font-size: 50px;
   margin-top: 80px;
   margin-left: 20;
@@ -81,7 +81,7 @@ background-attachment: fixed;
    text-align: left;
 }
 .techvoc h2{
-  color: white;
+  color: blue;
   font-size: 50px;
   margin-top: 80px;
   margin-left: 20;
