--- a/about.css
+++ b/about.css
@@ -74,7 +74,7 @@ background-attachment: fixed;
    text-align: left;
 }
 .abouti h2{
-  color: white;
+  color: blue;
   font-size: 40px;
   margin-top: 10px;
   margin-left: 50;
