--- a/contact.css
+++ b/contact.css
@@ -67,7 +67,7 @@ background-attachment: fixed;
   line-height: 25px;
 }
 .cont h2{
-  color: white;
+  color: blue;
   font-size: 50px;
   margin-top: 80px;
   margin-left: 30;
