--- a/contact.css
+++ b/contact.css
@@ -74,7 +74,7 @@ background-attachment: fixed;
    text-align: left;
 }
 .cont h3{
-  color: white;
+  color: black;
   font-size: 50px;
   margin-top: 50px;
   margin-left: 30;
