--- a/about.css
+++ b/about.css
@@ -81,7 +81,7 @@ background-attachment: fixed;
    text-align: left;
 }
 .abouti h3{
-  color: white;
+  color: darkgrey;
   font-size: 35px;
   margin-top: 10px;
   margin-left: 50;
